# rust-gpu-opencl-samples

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
kernels/collatz/: Cargo.toml
kernels/collatz/src/: lib.rs
kernels/mandelbrot/: Cargo.toml
kernels/mandelbrot-image/: Cargo.toml
kernels/mandelbrot-image/src/: lib.rs
kernels/mandelbrot/src/: lib.rs
kernels/nbody/: Cargo.toml
kernels/nbody/src/: lib.rs
kernels/prefix_sum/: Cargo.toml
kernels/prefix_sum/src/: lib.rs
kernels/raymarch/: Cargo.toml
kernels/raymarch/src/: lib.rs
kernels/reduce/: Cargo.toml
kernels/reduce/src/: lib.rs
runner/: Cargo.toml
runner/src/: main.rs
runner/tests/: raymarch_host.rs
