[workspace]
resolver = "2"
members = [
    "kernels/collatz",
    "kernels/mandelbrot",
    "kernels/prefix_sum",
    "runner",
]

[workspace.dependencies]
spirv-builder = { git = "https://github.com/bricevideau-ai/rust-gpu.git", branch = "opencl-kernel-support", default-features = false, features = ["use-compiled-tools"] }
spirv-std = { git = "https://github.com/bricevideau-ai/rust-gpu.git", branch = "opencl-kernel-support" }
glam = { version = ">=0.30.8", default-features = false }
opencl3 = "0.12"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bricevideau-ai/rust-gpu-opencl-samples"
