[package]
name = "raymarch"
version = "0.1.0"
edition.workspace = true

[lib]
# `dylib` for the SPIR-V kernel build; `rlib` so the host runner can also
# link this crate to call `pixel_color` in the host smoke test.
crate-type = ["dylib", "rlib"]

[dependencies]
spirv-std.workspace = true
glam.workspace = true

[lints]
workspace = true
